@@ -7,6 +7,7 @@
  */
 package io.camunda.it.rdbms.exporter;
 
+import static io.camunda.it.rdbms.db.fixtures.CommonFixtures.nextKey;
 import static io.camunda.it.rdbms.exporter.RecordFixtures.getAuthorizationRecord;
 import static io.camunda.it.rdbms.exporter.RecordFixtures.getDecisionDefinitionCreatedRecord;
 import static io.camunda.it.rdbms.exporter.RecordFixtures.getDecisionRequirementsCreatedRecord;
@@ -26,12 +27,11 @@ import static io.camunda.it.rdbms.exporter.RecordFixtures.getUserTaskCreatedReco
 import static org.assertj.core.api.Assertions.assertThat;
 
 import io.camunda.db.rdbms.RdbmsService;
-import io.camunda.exporter.rdbms.RdbmsExporter;
-import io.camunda.search.entities.AuthorizationEntity;
+import io.camunda.exporter.rdbms.RdbmsExporterWrapper;
 import io.camunda.search.entities.FlowNodeInstanceEntity.FlowNodeState;
 import io.camunda.search.entities.IncidentEntity.IncidentState;
+import io.camunda.search.entities.ProcessDefinitionEntity;
 import io.camunda.search.entities.ProcessInstanceEntity.ProcessInstanceState;
-import io.camunda.security.entity.Permission;
 import io.camunda.zeebe.broker.exporter.context.ExporterConfiguration;
 import io.camunda.zeebe.broker.exporter.context.ExporterContext;
 import io.camunda.zeebe.exporter.test.ExporterTestController;
@@ -49,7 +49,6 @@ import io.camunda.zeebe.protocol.record.intent.UserIntent;
 import io.camunda.zeebe.protocol.record.intent.VariableIntent;
 import io.camunda.zeebe.protocol.record.value.AuthorizationOwnerType;
 import io.camunda.zeebe.protocol.record.value.AuthorizationRecordValue;
-import io.camunda.zeebe.protocol.record.value.AuthorizationRecordValue.PermissionValue;
 import io.camunda.zeebe.protocol.record.value.AuthorizationResourceType;
 import io.camunda.zeebe.protocol.record.value.GroupRecordValue;
 import io.camunda.zeebe.protocol.record.value.MappingRecordValue;
@@ -64,7 +63,6 @@ import io.camunda.zeebe.protocol.record.value.deployment.DecisionRecordValue;
 import io.camunda.zeebe.protocol.record.value.deployment.DecisionRequirementsRecordValue;
 import io.camunda.zeebe.protocol.record.value.deployment.Form;
 import io.camunda.zeebe.protocol.record.value.deployment.Process;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -77,21 +75,27 @@ import org.springframework.test.context.TestPropertySource;
 
 @Tag("rdbms")
 @SpringBootTest(classes = {RdbmsTestConfiguration.class})
-@TestPropertySource(properties = {"spring.liquibase.enabled=false", "camunda.database.type=rdbms"})
+@TestPropertySource(
+    properties = {
+      "spring.liquibase.enabled=false",
+      "camunda.database.type=rdbms",
+      "zeebe.broker.exporters.rdbms.args.maxQueueSize=0",
+      "camunda.database.index-prefix=C8_"
+    })
 class RdbmsExporterIT {
 
   private final ExporterTestController controller = new ExporterTestController();
 
   @Autowired private RdbmsService rdbmsService;
 
-  private RdbmsExporter exporter;
+  private RdbmsExporterWrapper exporter;
 
   @BeforeEach
   void setUp() {
-    exporter = new RdbmsExporter(rdbmsService);
+    exporter = new RdbmsExporterWrapper(rdbmsService);
     exporter.configure(
         new ExporterContext(
-            null, new ExporterConfiguration("foo", Collections.emptyMap()), 1, null, null));
+            null, new ExporterConfiguration("foo", Map.of("maxQueueSize", 0)), 1, null, null));
     exporter.open(controller);
   }
 
@@ -102,8 +106,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(processInstanceRecord);
-    // and we do a manual flush
-    exporter.flushExecutionQueue();
 
     // then
     final var key =
@@ -116,7 +118,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(processInstanceCompletedRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var completedProcessInstance = rdbmsService.getProcessInstanceReader().findOne(key);
@@ -131,13 +132,13 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(processDefinitionRecord);
-    // and we do a manual flush
-    exporter.flushExecutionQueue();
 
     // then
     final var key = ((Process) processDefinitionRecord.getValue()).getProcessDefinitionKey();
     final var processDefinition = rdbmsService.getProcessDefinitionReader().findOne(key);
     assertThat(processDefinition).isNotEmpty();
+    assertThat(processDefinition).map(ProcessDefinitionEntity::bpmnXml).isPresent();
+    assertThat(processDefinition).map(ProcessDefinitionEntity::formId).contains("test");
   }
 
   @Test
@@ -153,8 +154,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(variableCreatedRecord);
-    // and we do a manual flush
-    exporter.flushExecutionQueue();
 
     // then
     final var variable = rdbmsService.getVariableReader().findOne(variableCreatedRecord.getKey());
@@ -180,8 +179,6 @@ class RdbmsExporterIT {
 
     // when
     recordList.forEach(record -> exporter.export(record));
-    // and we do a manual flush
-    exporter.flushExecutionQueue();
 
     // then
     final var key =
@@ -203,7 +200,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(flowNodeRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var key = flowNodeRecord.getKey();
@@ -215,12 +211,13 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(flowNodeCompleteRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var completedFlowNode = rdbmsService.getFlowNodeInstanceReader().findOne(key);
     assertThat(completedFlowNode).isNotEmpty();
     assertThat(completedFlowNode.get().state()).isEqualTo(FlowNodeState.COMPLETED);
+    // Default tree path
+    assertThat(completedFlowNode.get().treePath()).isEqualTo("1/2");
   }
 
   @Test
@@ -230,7 +227,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(userTaskRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var key = ((UserTaskRecordValue) userTaskRecord.getValue()).getUserTaskKey();
@@ -245,8 +241,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(record);
-    // and we do a manual flush
-    exporter.flushExecutionQueue();
 
     // then
     final var key =
@@ -262,8 +256,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(decisionDefinitionRecord);
-    // and we do a manual flush
-    exporter.flushExecutionQueue();
 
     // then
     final var key = ((DecisionRecordValue) decisionDefinitionRecord.getValue()).getDecisionKey();
@@ -274,12 +266,11 @@ class RdbmsExporterIT {
   @Test
   public void shouldExportUpdateAndDeleteUser() {
     // given
-    final var userRecord = getUserRecord(42L, UserIntent.CREATED);
+    final var userRecord = getUserRecord(42L, "test", UserIntent.CREATED);
     final var userRecordValue = ((UserRecordValue) userRecord.getValue());
 
     // when
     exporter.export(userRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var user = rdbmsService.getUserReader().findOne(userRecord.getKey());
@@ -291,12 +282,11 @@ class RdbmsExporterIT {
     assertThat(user.get().password()).isEqualTo(userRecordValue.getPassword());
 
     // given
-    final var updateUserRecord = getUserRecord(42L, UserIntent.UPDATED);
+    final var updateUserRecord = getUserRecord(42L, "test", UserIntent.UPDATED);
     final var updateUserRecordValue = ((UserRecordValue) updateUserRecord.getValue());
 
     // when
     exporter.export(updateUserRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var updatedUser = rdbmsService.getUserReader().findOne(userRecord.getKey());
@@ -308,8 +298,7 @@ class RdbmsExporterIT {
     assertThat(updatedUser.get().password()).isEqualTo(updateUserRecordValue.getPassword());
 
     // when
-    exporter.export(getUserRecord(42L, UserIntent.DELETED));
-    exporter.flushExecutionQueue();
+    exporter.export(getUserRecord(42L, "test", UserIntent.DELETED));
 
     // then
     final var deletedUser = rdbmsService.getUserReader().findOne(userRecord.getKey());
@@ -318,16 +307,19 @@ class RdbmsExporterIT {
 
   @Test
   public void shouldExportAndUpdateTenant() {
+    final var tenantId = "tenant=" + nextKey();
     // given
-    final var tenantRecord = getTenantRecord(42L, TenantIntent.CREATED);
+    final var tenantRecord = getTenantRecord(42L, tenantId, TenantIntent.CREATED);
     final var tenantRecordValue = ((TenantRecordValue) tenantRecord.getValue());
 
     // when
     exporter.export(tenantRecord);
-    exporter.flushExecutionQueue();
 
     // then
-    final var tenant = rdbmsService.getTenantReader().findOne(tenantRecord.getKey());
+    final var tenant =
+        rdbmsService
+            .getTenantReader()
+            .findOne(((TenantRecordValue) tenantRecord.getValue()).getTenantId());
     assertThat(tenant).isNotEmpty();
     assertThat(tenant.get().key()).isEqualTo(tenantRecord.getKey());
     assertThat(tenant.get().key()).isEqualTo(tenantRecordValue.getTenantKey());
@@ -335,54 +327,21 @@ class RdbmsExporterIT {
     assertThat(tenant.get().name()).isEqualTo(tenantRecordValue.getName());
 
     // given
-    final var updateTenantRecord = getTenantRecord(42L, TenantIntent.UPDATED);
+    final var updateTenantRecord = getTenantRecord(42L, tenantId, TenantIntent.UPDATED);
     final var updateTenantRecordValue = ((TenantRecordValue) updateTenantRecord.getValue());
 
     // when
     exporter.export(updateTenantRecord);
-    exporter.flushExecutionQueue();
 
     // then
-    final var updatedTenant = rdbmsService.getTenantReader().findOne(tenantRecord.getKey());
+    final var updatedTenant =
+        rdbmsService
+            .getTenantReader()
+            .findOne(((TenantRecordValue) tenantRecord.getValue()).getTenantId());
     assertThat(updatedTenant).isNotEmpty();
     assertThat(updatedTenant.get().key()).isEqualTo(updateTenantRecordValue.getTenantKey());
     assertThat(updatedTenant.get().tenantId()).isEqualTo(updateTenantRecordValue.getTenantId());
     assertThat(updatedTenant.get().name()).isEqualTo(updateTenantRecordValue.getName());
-  }
-
-  @Test
-  public void shouldExportTenantAndAddAndDeleteMember() {
-    // given
-    final var tenantRecord = getTenantRecord(43L, TenantIntent.CREATED);
-    final var tenantRecordValue = ((TenantRecordValue) tenantRecord.getValue());
-
-    // when
-    exporter.export(tenantRecord);
-    exporter.flushExecutionQueue();
-
-    // then
-    final var tenant = rdbmsService.getTenantReader().findOne(tenantRecord.getKey());
-    assertThat(tenant).isNotEmpty();
-    assertThat(tenant.get().key()).isEqualTo(tenantRecordValue.getTenantKey());
-    assertThat(tenant.get().name()).isEqualTo(tenantRecordValue.getName());
-
-    // when
-    exporter.export(getTenantRecord(43L, TenantIntent.ENTITY_ADDED, 1337L));
-    exporter.flushExecutionQueue();
-
-    // then
-    final var updatedTenant =
-        rdbmsService.getTenantReader().findOne(tenantRecord.getKey()).orElseThrow();
-    assertThat(updatedTenant.assignedMemberKeys()).containsExactly(1337L);
-
-    // when
-    exporter.export(getTenantRecord(43L, TenantIntent.ENTITY_REMOVED, 1337L));
-    exporter.flushExecutionQueue();
-
-    // then
-    final var deletedTenant =
-        rdbmsService.getTenantReader().findOne(tenantRecord.getKey()).orElseThrow();
-    assertThat(deletedTenant.assignedMemberKeys()).isEmpty();
   }
 
   @Test
@@ -393,7 +352,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(roleRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var role = rdbmsService.getRoleReader().findOne(roleRecord.getKey());
@@ -407,7 +365,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(updateRoleRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var updatedRole = rdbmsService.getRoleReader().findOne(roleRecord.getKey());
@@ -417,7 +374,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(getRoleRecord(42L, RoleIntent.DELETED));
-    exporter.flushExecutionQueue();
 
     // then
     final var deletedRole = rdbmsService.getRoleReader().findOne(roleRecord.getKey());
@@ -432,7 +388,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(roleRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var role = rdbmsService.getRoleReader().findOne(roleRecord.getKey());
@@ -442,7 +397,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(getRoleRecord(42L, RoleIntent.ENTITY_ADDED, 1337L));
-    exporter.flushExecutionQueue();
 
     // then
     final var updatedRole = rdbmsService.getRoleReader().findOne(roleRecord.getKey()).orElseThrow();
@@ -450,7 +404,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(getRoleRecord(42L, RoleIntent.ENTITY_REMOVED, 1337L));
-    exporter.flushExecutionQueue();
 
     // then
     final var deletedRole = rdbmsService.getRoleReader().findOne(roleRecord.getKey()).orElseThrow();
@@ -465,12 +418,11 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(groupRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var group = rdbmsService.getGroupReader().findOne(groupRecord.getKey());
     assertThat(group).isNotEmpty();
-    assertThat(group.get().key()).isEqualTo(groupRecordValue.getGroupKey());
+    assertThat(group.get().groupKey()).isEqualTo(groupRecordValue.getGroupKey());
     assertThat(group.get().name()).isEqualTo(groupRecordValue.getName());
 
     // given
@@ -479,17 +431,15 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(updateGroupRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var updatedGroup = rdbmsService.getGroupReader().findOne(groupRecord.getKey());
     assertThat(updatedGroup).isNotEmpty();
-    assertThat(updatedGroup.get().key()).isEqualTo(updateGroupRecordValue.getGroupKey());
+    assertThat(updatedGroup.get().groupKey()).isEqualTo(updateGroupRecordValue.getGroupKey());
     assertThat(updatedGroup.get().name()).isEqualTo(updateGroupRecordValue.getName());
 
     // when
     exporter.export(getGroupRecord(42L, GroupIntent.DELETED));
-    exporter.flushExecutionQueue();
 
     // then
     final var deletedGroup = rdbmsService.getGroupReader().findOne(groupRecord.getKey());
@@ -504,17 +454,15 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(groupRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var group = rdbmsService.getGroupReader().findOne(groupRecord.getKey());
     assertThat(group).isNotEmpty();
-    assertThat(group.get().key()).isEqualTo(groupRecordValue.getGroupKey());
+    assertThat(group.get().groupKey()).isEqualTo(groupRecordValue.getGroupKey());
     assertThat(group.get().name()).isEqualTo(groupRecordValue.getName());
 
     // when
     exporter.export(getGroupRecord(43L, GroupIntent.ENTITY_ADDED, 1337L));
-    exporter.flushExecutionQueue();
 
     // then
     final var updatedGroup =
@@ -523,7 +471,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(getGroupRecord(43L, GroupIntent.ENTITY_REMOVED, 1337L));
-    exporter.flushExecutionQueue();
 
     // then
     final var deletedGroup =
@@ -538,7 +485,7 @@ class RdbmsExporterIT {
     final var processInstanceKey =
         ((ProcessInstanceRecordValue) processInstanceRecord.getValue()).getProcessInstanceKey();
     exporter.export(processInstanceRecord);
-    final var flowNodeRecord = getFlowNodeActivatingRecord(1L);
+    final var flowNodeRecord = getFlowNodeActivatingRecord(1L, processInstanceKey);
     final var flowNodeInstanceKey = flowNodeRecord.getKey();
     exporter.export(flowNodeRecord);
 
@@ -548,7 +495,6 @@ class RdbmsExporterIT {
         getIncidentRecord(
             IncidentIntent.CREATED, incidentKey, processInstanceKey, flowNodeInstanceKey);
     exporter.export(incidentRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var flowNode = rdbmsService.getFlowNodeInstanceReader().findOne(flowNodeInstanceKey);
@@ -570,7 +516,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(incidentResolvedRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var flowNode2 = rdbmsService.getFlowNodeInstanceReader().findOne(flowNodeInstanceKey);
@@ -592,7 +537,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(formCreatedRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var formKey = ((Form) formCreatedRecord.getValue()).getFormKey();
@@ -607,7 +551,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(mappingCreatedRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var key = ((MappingRecordValue) mappingCreatedRecord.getValue()).getMappingKey();
@@ -619,7 +562,6 @@ class RdbmsExporterIT {
 
     // when
     exporter.export(mappingDeletedRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var deletedMapping = rdbmsService.getMappingReader().findOne(key);
@@ -627,21 +569,20 @@ class RdbmsExporterIT {
   }
 
   @Test
-  public void shouldExportAndModifyAuthorization() {
+  public void shouldExportAndUpdateAuthorization() {
     // given
     final var authorizationRecord =
         getAuthorizationRecord(
-            AuthorizationIntent.PERMISSION_ADDED,
+            AuthorizationIntent.CREATED,
             1337L,
+            "foo",
             AuthorizationOwnerType.USER,
             AuthorizationResourceType.PROCESS_DEFINITION,
-            Map.of(
-                PermissionType.READ, Set.of("resource1", "resource2"),
-                PermissionType.CREATE, Set.of("resource3", "resource4")));
+            "resource1",
+            Set.of(PermissionType.READ, PermissionType.CREATE));
 
     // when
     exporter.export(authorizationRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var recordValue = (AuthorizationRecordValue) authorizationRecord.getValue();
@@ -649,7 +590,7 @@ class RdbmsExporterIT {
         rdbmsService
             .getAuthorizationReader()
             .findOne(
-                recordValue.getOwnerKey(),
+                recordValue.getOwnerId(),
                 recordValue.getOwnerType().name(),
                 recordValue.getResourceType().name())
             .orElse(null);
@@ -658,57 +599,48 @@ class RdbmsExporterIT {
     // given
     final var authorizationUpdatedRecord =
         getAuthorizationRecord(
-            AuthorizationIntent.PERMISSION_ADDED,
+            AuthorizationIntent.UPDATED,
             1337L,
+            "foo",
             AuthorizationOwnerType.USER,
             AuthorizationResourceType.PROCESS_DEFINITION,
-            Map.of(
-                PermissionType.READ, Set.of("resource5", "resource6"),
-                PermissionType.CREATE, Set.of("resource7", "resource8")));
+            "resource1",
+            Set.of(PermissionType.UPDATE, PermissionType.DELETE));
 
     // when
     exporter.export(authorizationUpdatedRecord);
-    exporter.flushExecutionQueue();
 
     // then
-    final var updatedRecordValue = (AuthorizationRecordValue) authorizationUpdatedRecord.getValue();
     final var updatedAuthorization =
         rdbmsService
             .getAuthorizationReader()
             .findOne(
-                recordValue.getOwnerKey(),
+                recordValue.getOwnerId(),
                 recordValue.getOwnerType().name(),
                 recordValue.getResourceType().name())
             .orElse(null);
 
     assertThat(updatedAuthorization).isNotNull();
-    assertThat(updatedAuthorization.permissions()).hasSize(2);
-    assertThat(updatedAuthorization.permissions())
-        .contains(
-            new Permission(
-                PermissionType.READ, Set.of("resource1", "resource2", "resource5", "resource6")));
-    assertThat(updatedAuthorization.permissions())
-        .contains(
-            new Permission(
-                PermissionType.CREATE, Set.of("resource3", "resource4", "resource7", "resource8")));
+    assertThat(updatedAuthorization.permissionTypes()).hasSize(2);
+    assertThat(updatedAuthorization.permissionTypes())
+        .containsExactlyInAnyOrder(PermissionType.UPDATE, PermissionType.DELETE);
   }
 
   @Test
-  public void shouldExportAndRemoveAuthorization() {
+  public void shouldExportAndDeleteAuthorization() {
     // given
     final var authorizationRecord =
         getAuthorizationRecord(
-            AuthorizationIntent.PERMISSION_ADDED,
+            AuthorizationIntent.CREATED,
             1337L,
+            "foo",
             AuthorizationOwnerType.USER,
-            AuthorizationResourceType.DECISION_REQUIREMENTS_DEFINITION,
-            Map.of(
-                PermissionType.READ, Set.of("resource1", "resource2"),
-                PermissionType.CREATE, Set.of("resource3", "resource4")));
+            AuthorizationResourceType.PROCESS_DEFINITION,
+            "resource1",
+            Set.of(PermissionType.READ, PermissionType.CREATE));
 
     // when
     exporter.export(authorizationRecord);
-    exporter.flushExecutionQueue();
 
     // then
     final var recordValue = (AuthorizationRecordValue) authorizationRecord.getValue();
@@ -716,58 +648,35 @@ class RdbmsExporterIT {
         rdbmsService
             .getAuthorizationReader()
             .findOne(
-                recordValue.getOwnerKey(),
+                recordValue.getOwnerId(),
                 recordValue.getOwnerType().name(),
                 recordValue.getResourceType().name())
             .orElse(null);
     assertThat(authorization).isNotNull();
 
     // given
-    final var authorizationUpdatedRecord =
+    final var authorizationDeletedRecord =
         getAuthorizationRecord(
-            AuthorizationIntent.PERMISSION_REMOVED,
-            1337L,
-            AuthorizationOwnerType.USER,
-            AuthorizationResourceType.DECISION_REQUIREMENTS_DEFINITION,
-            Map.of(
-                PermissionType.READ, Set.of("resource1"),
-                PermissionType.CREATE, Set.of("resource3")));
+            AuthorizationIntent.DELETED,
+            recordValue.getAuthorizationKey(),
+            recordValue.getOwnerId(),
+            recordValue.getOwnerType(),
+            recordValue.getResourceType(),
+            recordValue.getResourceId(),
+            recordValue.getPermissionTypes());
 
     // when
-    exporter.export(authorizationUpdatedRecord);
-    exporter.flushExecutionQueue();
+    exporter.export(authorizationDeletedRecord);
 
     // then
-    final var updatedAuthorization =
+    final var deletedAuthorization =
         rdbmsService
             .getAuthorizationReader()
             .findOne(
-                recordValue.getOwnerKey(),
+                recordValue.getOwnerId(),
                 recordValue.getOwnerType().name(),
                 recordValue.getResourceType().name())
             .orElse(null);
-
-    assertThat(updatedAuthorization).isNotNull();
-    assertThat(updatedAuthorization.permissions()).hasSize(2);
-    assertThat(updatedAuthorization.permissions())
-        .contains(new Permission(PermissionType.READ, Set.of("resource2")));
-    assertThat(updatedAuthorization.permissions())
-        .contains(new Permission(PermissionType.CREATE, Set.of("resource4")));
-  }
-
-  private void compareAuthorizations(
-      final AuthorizationRecordValue recordValue, final AuthorizationEntity entity) {
-    assertThat(recordValue.getOwnerKey()).isEqualTo(entity.ownerKey());
-    assertThat(recordValue.getOwnerType().name()).isEqualTo(entity.ownerType());
-    assertThat(recordValue.getResourceType().name()).isEqualTo(entity.resourceType());
-
-    for (final PermissionValue permissionValue : recordValue.getPermissions()) {
-      if (!permissionValue.getResourceIds().isEmpty()) {
-        assertThat(entity.permissions())
-            .contains(
-                new Permission(
-                    permissionValue.getPermissionType(), permissionValue.getResourceIds()));
-      }
-    }
+    assertThat(deletedAuthorization).isNull();
   }
 }
