@@ -9,34 +9,127 @@ package io.camunda.security.auth;
 
 import static java.util.Collections.unmodifiableList;
 
+import com.fasterxml.jackson.annotation.JsonAutoDetect;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonProperty;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 import java.util.function.Function;
 
-public record Authentication(
-    Long authenticatedUserKey,
-    List<Long> authenticatedGroupKeys,
-    List<String> authenticatedTenantIds,
-    String token) {
+@JsonAutoDetect(fieldVisibility = JsonAutoDetect.Visibility.ANY)
+public final class Authentication {
+  private final String authenticatedUsername;
+  private final List<Long> authenticatedGroupKeys;
+  private final List<Long> authenticatedRoleKeys;
+  private final List<String> authenticatedTenantIds;
+  private final Map<String, Object> claims;
+
+  @JsonCreator(mode = JsonCreator.Mode.PROPERTIES)
+  public Authentication(
+      final @JsonProperty("authenticated_username") String authenticatedUsername,
+      final @JsonProperty("authenticated_group_keys") List<Long> authenticatedGroupKeys,
+      final @JsonProperty("authenticated_role_keys") List<Long> authenticatedRoleKeys,
+      final @JsonProperty("authenticated_tenant_ids") List<String> authenticatedTenantIds,
+      final @JsonProperty("claims") Map<String, Object> claims) {
+    this.authenticatedUsername = authenticatedUsername;
+    this.authenticatedGroupKeys = authenticatedGroupKeys;
+    this.authenticatedRoleKeys = authenticatedRoleKeys;
+    this.authenticatedTenantIds = authenticatedTenantIds;
+    this.claims = claims;
+  }
+
+  public static Authentication none() {
+    return new Builder().build();
+  }
 
   public static Authentication of(final Function<Builder, Builder> builderFunction) {
     return builderFunction.apply(new Builder()).build();
   }
 
+  public String authenticatedUsername() {
+    return authenticatedUsername;
+  }
+
+  public List<Long> authenticatedGroupKeys() {
+    return authenticatedGroupKeys;
+  }
+
+  public List<Long> authenticatedRoleKeys() {
+    return authenticatedRoleKeys;
+  }
+
+  public List<String> authenticatedTenantIds() {
+    return authenticatedTenantIds;
+  }
+
+  public Map<String, Object> claims() {
+    return claims;
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(
+        authenticatedUsername,
+        authenticatedGroupKeys,
+        authenticatedRoleKeys,
+        authenticatedTenantIds,
+        claims);
+  }
+
+  @Override
+  public boolean equals(final Object obj) {
+    if (obj == this) {
+      return true;
+    }
+    if (obj == null || obj.getClass() != getClass()) {
+      return false;
+    }
+    final Authentication that = (Authentication) obj;
+    return Objects.equals(authenticatedUsername, that.authenticatedUsername)
+        && Objects.equals(authenticatedGroupKeys, that.authenticatedGroupKeys)
+        && Objects.equals(authenticatedRoleKeys, that.authenticatedRoleKeys)
+        && Objects.equals(authenticatedTenantIds, that.authenticatedTenantIds)
+        && Objects.equals(claims, that.claims);
+  }
+
+  @Override
+  public String toString() {
+    return "Authentication["
+        + "authenticatedUserKey="
+        + authenticatedUsername
+        + ", "
+        + "authenticatedGroupKeys="
+        + authenticatedGroupKeys
+        + ", "
+        + "authenticatedRoleKeys="
+        + authenticatedRoleKeys
+        + ", "
+        + "authenticatedTenantIds="
+        + authenticatedTenantIds
+        + ", "
+        + "claims="
+        + claims
+        + ']';
+  }
+
   public static final class Builder {
 
-    private Long userKey;
+    private String username;
     private final List<Long> groupKeys = new ArrayList<>();
+    private final List<Long> roleKeys = new ArrayList<>();
     private final List<String> tenants = new ArrayList<>();
-    private String token;
+    private Map<String, Object> claims;
 
-    public Builder user(final Long value) {
-      userKey = value;
+    public Builder user(final String value) {
+      username = value;
       return this;
     }
 
     public Builder group(final Long value) {
-      return groupKeys(List.of(value));
+      return groupKeys(Collections.singletonList(value));
     }
 
     public Builder groupKeys(final List<Long> values) {
@@ -46,8 +139,19 @@ public record Authentication(
       return this;
     }
 
+    public Builder role(final Long value) {
+      return roleKeys(Collections.singletonList(value));
+    }
+
+    public Builder roleKeys(final List<Long> values) {
+      if (values != null) {
+        roleKeys.addAll(values);
+      }
+      return this;
+    }
+
     public Builder tenant(final String tenant) {
-      return tenants(List.of(tenant));
+      return tenants(Collections.singletonList(tenant));
     }
 
     public Builder tenants(final List<String> values) {
@@ -57,14 +161,18 @@ public record Authentication(
       return this;
     }
 
-    public Builder token(final String value) {
-      token = value;
+    public Builder claims(final Map<String, Object> value) {
+      claims = value;
       return this;
     }
 
     public Authentication build() {
       return new Authentication(
-          userKey, unmodifiableList(groupKeys), unmodifiableList(tenants), token);
+          username,
+          unmodifiableList(groupKeys),
+          unmodifiableList(roleKeys),
+          unmodifiableList(tenants),
+          claims);
     }
   }
 }
